HelloUltraviolet/Fixtures/RejectedSource/Expressions/ExternCallUnsafeRequirement/Source/Main.uv
//! Rejected expression specimen for extern calls outside unsafe.

extern "C" {
    public procedure importedValue() -> i32
}

public procedure externCallUnsafeRequirementReference() -> i32 {
    return importedValue()
}

